# ChangeLog for dev-ruby/ruby-glib2
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.114 2014/10/14 22:50:01 mrueg Exp $

*ruby-glib2-2.2.2 (14 Oct 2014)

  14 Oct 2014; Manuel Rüger <mrueg@gentoo.org> +ruby-glib2-2.2.2.ebuild:
  Version bump. Add ruby21. Add tests (test_async_clear_environment failing).

  21 May 2014; Manuel Rüger <mrueg@gentoo.org> ruby-glib2-1.1.8.ebuild,
  ruby-glib2-1.2.6.ebuild:
  Remove ruby18 target.

*ruby-glib2-2.2.0 (15 Mar 2014)

  15 Mar 2014; Naohiro Aota <naota@gentoo.org> +ruby-glib2-2.2.0.ebuild:
  version bump

  10 Mar 2014; Manuel Rüger <mrueg@gentoo.org>
  -files/ruby-glib2-0.16.0-glib-2.14.patch,
  -files/ruby-glib2-0.16.0-glib-2.16.patch,
  -files/ruby-glib2-0.16.0-typedef.patch, -ruby-glib2-1.1.3.ebuild,
  ruby-glib2-1.1.8.ebuild, ruby-glib2-1.2.6.ebuild:
  Cleanup old. Remove ree18.

*ruby-glib2-2.1.0 (15 Jan 2014)

  15 Jan 2014; Naohiro Aota <naota@gentoo.org> +ruby-glib2-2.1.0.ebuild:
  version bump

*ruby-glib2-2.0.2 (05 Dec 2013)

  05 Dec 2013; Naohiro Aota <naota@gentoo.org> +ruby-glib2-2.0.2.ebuild:
  version bump.

  05 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby-glib2-1.1.8.ebuild:
  Stable for ppc64, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-glib2-1.1.8.ebuild:
  Stable for ppc, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-glib2-1.1.8.ebuild:
  Stable for x86, wrt bug #480974

  17 Aug 2013; Agostino Sarubbo <ago@gentoo.org> ruby-glib2-1.1.8.ebuild:
  Stable for amd64, wrt bug #480974

  14 Aug 2013; Hans de Graaff <graaff@gentoo.org> -ruby-glib2-1.0.3.ebuild,
  -ruby-glib2-1.1.4.ebuild, -ruby-glib2-1.1.5.ebuild, -ruby-glib2-1.1.6.ebuild:
  Cleanup.

*ruby-glib2-1.2.6 (04 May 2013)

  04 May 2013; Naohiro Aota <naota@gentoo.org> +ruby-glib2-1.2.6.ebuild:
  version bump

*ruby-glib2-1.1.8 (26 Dec 2012)
