@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST ruby-gnome2-all-1.1.8.tar.gz 1018612 SHA256 5118fc18eeff60cbe371e6461dc6329e7c544f1908219df42462274dace5968a SHA512 3ce05278fca4b402f5e8ec9883290022ad07ea800af436ee35ab6a4960e4004a0c076567c68587bee81a27d863ba54de19a7816585ce510d308b7e0e91fb1981 WHIRLPOOL b59ed271675ca8f9b80aeecd7d003537011a7162131176ca202b7a40fafae27cc8da687a50792985f07477dcf310a70d0c512692d649b3584d64653af9cf0e1b
 DIST ruby-gnome2-all-1.2.6.tar.gz 1718802 SHA256 b9e0093e82d53aead93ba1cd261faf03ccede873ee0e7ffd35090ce1c604be66 SHA512 b2e123ece31b89dc1d37040297d726b625d71579bbf60cb84c89b63f0fb9bf097d5f0675a16dfc7aecd8161913c737b22c057cc872dd454f341440c76901c07d WHIRLPOOL 2e4f47014b93838a9c31267fcca86458127ab9bc02b241a6bd0c3f14df8af7a25f6166d294577eb674f59c1e1d042208e5b448c83429011651dc6af0e9383b9a
 DIST ruby-gnome2-all-2.0.2.tar.gz 1674872 SHA256 12656b268206d2d1fc99da4f7163910844efc38117380180f37bfdac249310b9 SHA512 c739a565b14e31905a30e8ebf7cfd6abcf576bb45f3f0eaedba3937fda7818864825d95de5d1c229af5dc09c769d56e788a366cdbf74b625804fb844fd818d6f WHIRLPOOL 662eadbedc9b9e99de1cc6e3556f7bec6063c58c57f4d2ab0b51bbf98eeca9f5955910442a58ff3a7649f3e049f0d0573d83e7a503c0ca58bac3a265f50e121b
@@ -9,6 +12,13 @@ EBUILD ruby-glib2-1.2.6.ebuild 503 SHA256 436be273fdfd20f6aba390d8e1d5724dde5674
 EBUILD ruby-glib2-2.0.2.ebuild 510 SHA256 be474b0c18107aeb187cd180b45dc93369e57b045c5fdf7b445fef7c0dcc1a21 SHA512 2336d029b202e426700edbcded448af0dc234405c0e153659ec7b0b4a04f97258f8d806a766db46c7b6998f6d1a6594b0b2747a9e85684b5fefc5563373c2513 WHIRLPOOL 5e8040c30e0c35f980d0c39190eb696e34f93016acf6f12a611dc75d2266b632fdbace9fdb0dc09d08540a47887841348d7d08f4f00c6ffd190cd425c5693fb8
 EBUILD ruby-glib2-2.1.0.ebuild 510 SHA256 9ddf00184dbeba1adee3f401e5abb37456d884df4816ee986150155c9fa6bbfa SHA512 e5d4b08a5172fbf81c9593fb5b62db835fc5ba36a47efdfec283ba51650c738874a72c1867a29de94e6489f5969357b2eba40cd6912ae7aff129789f2fde715b WHIRLPOOL bd7f95c85a1f042491eb2ce858da9c73232a1fa166690ba408ad2062a78c1d41f48463651ee455a8a6c729474ef18c09e162f3a47eb9c5e8108e2f4e170055ee
 EBUILD ruby-glib2-2.2.0.ebuild 510 SHA256 96350b79e6a20168926128154e76c7d0c697da2f115af8968cce095fac8c6a6f SHA512 407615e946428753424778cc58025fe2e9e892adf44deaca9bd87a703a48184aa21d14a0b13f7e953af6cfbfc4e9874dfdb79040f1ede15abca0659f5b893ea5 WHIRLPOOL 4b19c7751335e5f9272eb310b7e7622f243a324f14c69fdc23de01a25ce7bbe6fa23f393332a8a68dd1bb9a0d398acf4d200412b1617b42cf3bf0e44136f205a
-EBUILD ruby-glib2-2.2.2.ebuild 594 SHA256 d1bde314064f427646022138705eb22c73dfa73bfb98f5bbcc0963cd0f49c9b1 SHA512 09185796667e8b364e28b7c79182f446b08ed6ae56f2e433a859c36d9b71b47c96e9e2a235841514acd3a59f49ff274009f27c5387356381ba1939452e2bba50 WHIRLPOOL 5951fa908f36b40f3a539514908ad886ddf188de75580d4459608b14b30a49e53e83d5baffef5ebbbc0a93a2146b1fa12129aaef5f1f284eb0fa5245e77a255a
-MISC ChangeLog 14762 SHA256 301e9bcd77bfc4da8981623a4a7fc2af063133ea57b886727e4da66793a8f21b SHA512 95b0fa70eec19d4f41deabe218a6686a6a5f0532858352b6f0f34dc1fade50ec55edc7a62570bfd17037611845cb7c9f512ee9c87068a45df8af7bf33178dfef WHIRLPOOL 6841d5dcdfb5b59363458cd99da8fe79e3abfbe19701ab8bef4a1c73e0e865432bca94d7ffd1d3585a72b5e7fa6c75d34883b97b93dd3881c28f2117f305dc37
+EBUILD ruby-glib2-2.2.2.ebuild 783 SHA256 c1c5cc88ffe54b0b2bc62aca7858cfc4b042dc99c16c318e1d8809a068187572 SHA512 6f8c30d859d54ff3b3d0e22edba8fda228a72254b41e9ef7322fcda9e4935542cce0426c40df5e7ea5a0f879c6d77b8aeb2bed62d0edb2e75cc2ae483f2a1516 WHIRLPOOL c230ed3e44c33f66db2890e8fe8f16c0ee367748418771aaddce3591695b8f4c8b7bb355c543e07603445c08b1ee781a43012bdb5c06c9fbddd2ab37c4f496dc
+MISC ChangeLog 14885 SHA256 000b4e6f87d47d8865cd0bf403d43e0f46968638ff017e243c4015f253d4f4e8 SHA512 973899dfc144276b0d8fd465518847e850b9039426e3bab28121a51e25caf0f54f50ea356fd43ead8cc5c5c3db589901d95795999334d0e4f6008a79d4450ad1 WHIRLPOOL 98a927be5d9fb6dbcc23801ceb5aeaf36a26706cdfd15a33dc8af288f1470aeb82b6e1bf1bfa7d62895e6ffd47e54b742fa235cb139d0a13a246381b124fbeb5
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlRNCmwACgkQiIP6VqMIqNfGsAEAh7zaCkZcruW47p+tzqZ4p2uP
+VEBWqbbTKFjOV266VUsA/2MuRS3mVMRSwXTvjqwt8ltdnPLForYB41nQD/ffuFKv
+=WHy7
+-----END PGP SIGNATURE-----
