@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ruby-glib2
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.114 2014/10/14 22:50:01 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-glib2/ChangeLog,v 1.115 2014/10/26 14:51:23 graaff Exp $
+
+  26 Oct 2014; Hans de Graaff <graaff@gentoo.org> ruby-glib2-2.2.2.ebuild:
+  Fix failing test due to use of our sandbox.
 
 *ruby-glib2-2.2.2 (14 Oct 2014)
 
